<?xml version="1.0"?>
<package>
  <name>along_wall</name>
  <version>0.0.0</version>
  <description>The along_wall package</description>
  <maintainer email="evgeniy@todo.todo">evgeniy</maintainer>
  <license>TODO</license>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
